src/test/ui/issues/issue-7813.stderr
error[E0282]: type annotations needed for `&[_; 0]`
  --> $DIR/issue-7813.rs:2:9
   |
LL |     let v = &[];
   |         ^   --- type must be known at this point
   |
help: consider giving `v` an explicit type, where the placeholders `_` are specified
   |
LL |     let v: &[_; 0] = &[];
   |          +++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
